fix overflow

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -19,7 +19,7 @@ body {
 }
 
 .overtheflow {
-    z-index: 9999;
+    z-index: 9999px;
 }
 
 .light_1 {
